2004-03-07 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (scene::scene):  Fixed
	URI string given to Vrml97Parser constructor. scene::url should
	not be used at this point, since scene::url_ has not been
	initialized.

2004-03-07 Braden McDaniel  <braden@endoframe.com>

	Fixed uses of SemanticException to include URI, line number, and
	column number information.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g

2004-03-07 Braden McDaniel  <braden@endoframe.com>

	Corrected SphereSensor "offset" exposedField type to
	"SFRotation".

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2004-03-07 Braden McDaniel  <braden@endoframe.com>

	Fixed a problem with establishing IS mappings from exposedFields
	in the PROTO implementation to eventIns and eventOuts in the
	PROTO interface.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/private.h:  Added implementations of
	the binary_compose function object and the compose2 helper
	function.

2004-03-05 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Properly catch parse
	errors in browser::load_url.

2004-03-04 Braden McDaniel  <braden@endoframe.com>

	* src/lookat/lookat.cpp:  Fixed unnecesary redundant calls to
	openvrml::gl::viewer::input.

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	* m4/acx_pthread.m4:  Updated to most recent version of the
	ACX_PTHREAD macro.

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	* README:  List Boost as a dependency.

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	Changed the lookat license to the GPL.  (The LGPL doesn't make
	very much sense for ordinary executables.)

	* COPYING:  Added file.
	* README:  Updated license summary.